# duckdb-graphdb

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  run_ecommerce.sh  run_ecommerce_sub.sh  run_healthcare.sh  run_healthcare_sub.sh  run_task3.sh  run_task4.sh  run_task5.sh  run_task5a.sh
.github/workflows/: MainDistributionPipeline.yml
m2bench/disaster/: Task10.sql  load.sql
m2bench/ecommerce/: Task.sql  Task3.sql  Task3a.sql  Task3b.sql  Task4.sql  Task4a.sql  Task4b.sql  Task5.sql  Task5a.sql  load.sql
m2bench/healthcare/: Task7.sql  load.sql
src/: cypher_extension.cpp  read_graph.cpp
src/include/: cypher_extension.hpp
test/sql/: cypher.test
